# test_demo

./: .gitignore  CMakeLists.txt  README.md  doxyfile
demo/: CMakeLists.txt  client.cpp  server.cpp
include/client/: opcua_client.h  opcua_client_description.h  opcua_client_service.h
include/common/: opcua_custom_code.h  opcua_tool.hpp
include/server/: item_mq_msg.h  mqadapter.h  north_data_communicate_stack.h  opcua_server.h  opcua_server_alarms.h  opcua_server_data_share.h  opcua_server_description.h  opcua_server_event.h  opcua_server_historicaldata.h  opcua_server_method.h  opcua_server_monitoredItem.h  opcua_server_object_node.h  opcua_server_service.h  opcua_server_variable.h  open62541.h  testNS.h
libs/arm/boost/lib/: libboost_atomic.so.1.68.0  libboost_chrono.so.1.68.0  libboost_container.so.1.68.0  libboost_context.so.1.68.0  libboost_contract.so.1.68.0  libboost_coroutine.so.1.68.0  libboost_date_time.so.1.68.0  libboost_filesystem.so.1.68.0  libboost_graph.so.1.68.0  libboost_iostreams.so.1.68.0  libboost_locale.so.1.68.0  libboost_log.so.1.68.0  libboost_log_setup.so.1.68.0  libboost_math_c99.so.1.68.0  libboost_math_c99f.so.1.68.0  libboost_math_c99l.so.1.68.0  libboost_math_tr1.so.1.68.0  libboost_math_tr1f.so.1.68.0  libboost_math_tr1l.so.1.68.0  libboost_prg_exec_monitor.so.1.68.0  libboost_program_options.so.1.68.0  libboost_random.so.1.68.0  libboost_regex.so.1.68.0  libboost_serialization.so.1.68.0  libboost_signals.so.1.68.0  libboost_stacktrace_basic.so.1.68.0  libboost_stacktrace_noop.so.1.68.0  libboost_system.so.1.68.0  libboost_thread.so.1.68.0  libboost_timer.so.1.68.0  libboost_type_erasure.so.1.68.0  libboost_unit_test_framework.so.1.68.0  libboost_wave.so.1.68.0  libboost_wserialization.so.1.68.0
libs/arm/jsoncpp/lib/: libjsoncpp.so.bak
libs/arm/open62541/include/open62541/: nodeids.h  statuscodes.h  types_generated.h  types_generated_handling.h
libs/x64/open62541/include/open62541/: config.h
libs/x64/open62541/lib/: libopen62541.so.1
src/client/: opcua_client.cpp  opcua_client_service.cpp  opcua_server_object_node.h
src/server/: item_mq_msg.cpp  mqadapter.cpp  north_data_communicate_stack.cpp  opcua_server.cpp  opcua_server_alarms.cpp  opcua_server_data_share.cpp  opcua_server_event.cpp  opcua_server_historicaldata.cpp  opcua_server_method.cpp  opcua_server_monitoredItem.cpp  opcua_server_object_node.cpp  opcua_server_service.cpp  opcua_server_variable.cpp  testNS.c
